Daniel's last batch

--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
   font-weight: normal;
   font-style: normal; }
 body {
-  color: rgba(0, 0, 0, 0.8);
+  color: #333333;
   font-family: "omnesR", sans-serif;
   font-size: 14px;
   line-height: 1.5em;
@@ -140,7 +140,7 @@ h5, .small-txt {
   line-height: 1.45em; }
   .tw-btn-foot > a {
     display: block;
-    color: rgba(0, 0, 0, 0.8); }
+    color: #333333; }
   @media (min-width: 800px) {
     .tw-btn-foot {
       font-size: 0.875em; } }
@@ -157,7 +157,7 @@ h5, .small-txt {
   line-height: 1.45em; }
   .fb-btn-foot > a {
     display: block;
-    color: rgba(0, 0, 0, 0.8); }
+    color: #333333; }
   @media (min-width: 800px) {
     .fb-btn-foot {
       font-size: 0.875em; } }
@@ -206,10 +206,10 @@ h5, .small-txt {
   text-align: center;
   font-size: 1em;
   line-height: 1.45em;
-  color: rgba(0, 0, 0, 0.8); }
+  color: #333333; }
   .follow-btn > a {
     display: block;
-    color: rgba(0, 0, 0, 0.8); }
+    color: #333333; }
   @media (min-width: 800px) {
     .follow-btn {
       font-size: 0.875em; } }
@@ -260,14 +260,14 @@ h5, .small-txt {
 .cir-date .date {
   text-align: center; }
 .cir-date .date a {
-  color: rgba(0, 0, 0, 0.8); }
+  color: #333333; }
 .cir-date .date p span {
   color: #50C7E8;
   font-size: 0.6em;
   margin-top: 1.25em;
   display: block; }
 .cir-date .date p {
-  color: rgba(0, 0, 0, 0.8);
+  color: #333333;
   display: block;
   font-family: "omnesSB", sans-serif;
   font-size: 1.625em; }
@@ -331,7 +331,7 @@ h5, .small-txt {
     .featured-content .info {
       max-width: 8.5em; } }
 .featured-content .info h4 {
-  color: rgba(0, 0, 0, 0.8); }
+  color: #333333; }
 .featured-content .info h3 {
   margin: 0.5em 0; }
 .featured-content .info-profile {
@@ -490,7 +490,7 @@ h5, .small-txt {
     content: ""; }
   .filter-events li a {
     font-size: 1.125em;
-    color: rgba(0, 0, 0, 0.8);
+    color: #333333;
     margin-top: 1.25em;
     font-family: "omnesR", sans-serif; }
 
@@ -533,6 +533,8 @@ h5, .small-txt {
 .bg-blue {
   background: #396FB6;
   color: #FFFFFF; }
+  .bg-blue a {
+    color: #FFFFFF; }
 
 .hero-slider.bg-blue,
 .img-video-slider.bg-blue {
@@ -550,6 +552,8 @@ h5, .small-txt {
 .bg-aqua {
   background: #2BBCB6;
   color: #FFFFFF; }
+  .bg-aqua a {
+    color: #FFFFFF; }
 
 .hero-slider.bg-aqua,
 .img-video-slider.bg-aqua {
@@ -567,6 +571,8 @@ h5, .small-txt {
 .bg-skyblue {
   background: #50C7E8;
   color: #FFFFFF; }
+  .bg-skyblue a {
+    color: #FFFFFF; }
 
 .hero-slider.bg-skyblue,
 .img-video-slider.bg-skyblue {
@@ -584,6 +590,8 @@ h5, .small-txt {
 .bg-green {
   background: #7EC142;
   color: #FFFFFF; }
+  .bg-green a {
+    color: #FFFFFF; }
 
 .hero-slider.bg-green,
 .img-video-slider.bg-green {
@@ -601,10 +609,14 @@ h5, .small-txt {
 .bg-orange {
   background: #F9A31B;
   color: #FFFFFF; }
+  .bg-orange a {
+    color: #FFFFFF; }
 
 .bg-red {
   background: #F05A67;
   color: #FFFFFF; }
+  .bg-red a {
+    color: #FFFFFF; }
 
 .hero-slider.bg-red,
 .img-video-slider.bg-red {
@@ -622,6 +634,8 @@ h5, .small-txt {
 .bg-yellow {
   background: #F9A31B;
   color: #FFFFFF; }
+  .bg-yellow a {
+    color: #FFFFFF; }
 
 .hero-slider.bg-yellow,
 .img-video-slider.bg-yellow {
@@ -638,21 +652,23 @@ h5, .small-txt {
 
 .bg-sand {
   background: #F5F3ED; }
+  .bg-sand a {
+    color: #333333; }
 
 .bg-white {
   background: #FFFFFF; }
   .bg-white .filter-menu select {
-    color: rgba(0, 0, 0, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8); }
+    color: #333333;
+    border: 1px solid #333333; }
   .bg-white .filter-menu:after {
     border-top: 9px solid #000000; }
+  .bg-white a {
+    color: #333333; }
 
 .bg-white.breadcrumbs {
   border-bottom: 1px solid #4A4A4A;
   border-top: 1px solid #4A4A4A;
   margin-top: -1px; }
-  .bg-white.breadcrumbs a {
-    color: rgba(0, 0, 0, 0.8); }
 
 /* COLOR 4 TEXT */
 .c-white {
@@ -682,7 +698,7 @@ h5, .small-txt {
   color: #F9A31B; }
 
 .c-black {
-  color: rgba(0, 0, 0, 0.8); }
+  color: #333333; }
 
 .c-gray {
   color: #4A4A4A; }
@@ -973,15 +989,24 @@ header {
     font-size: 1.125em;
     text-decoration: none; }
   header .logo {
-    text-align: center; }
+    text-align: center;
+    z-index: 1;
+    position: relative; }
   header .logo img {
     top: 5px;
     position: relative; }
-  header .st-menu {
-    z-index: -1; }
+  header .nd-menu {
+    z-index: 1;
+    position: relative; }
   @media (min-width: 800px) {
+    header .nd-menu {
+      width: 2em; }
     header .logo {
+      width: 8em;
       text-align: left; } }
+  @media (min-width: 1028px) {
+    header .nd-menu {
+      width: 17em; } }
 
 .burger {
   cursor: pointer; }
@@ -1262,7 +1287,6 @@ aside.openMenu {
 
 footer {
   background: #FFFFFF;
-  border-top: 1px solid #DDDDDD;
   color: #4A4A4A;
   float: left;
   width: 100%;
@@ -1287,14 +1311,12 @@ footer {
         padding-right: 10%; } }
   footer .sitemap .bg-aqua-mask {
     opacity: 0.4;
-    z-index: -1;
-    -webkit-filter: brightness(1.3);
-    filter: brightness(1.3); }
+    z-index: -1; }
   footer .sitemap {
     color: #FFFFFF;
     font-family: "omnesSB", sans-serif; }
   footer .contact-block .bg-white-mask {
-    opacity: 0.7;
+    opacity: 0.8;
     z-index: -1; }
   footer .rights .bg-white-mask {
     z-index: -1; }
@@ -1324,11 +1346,13 @@ footer {
     font-size: 14px;
     text-decoration: underline; }
   .img-video-slider p {
-    color: rgba(0, 0, 0, 0.8);
+    color: #333333;
     font-size: 14px;
     padding-top: 1.3em; }
   .img-video-slider h2 {
-    font-family: "omnesSB", sans-serif; }
+    font-family: "omnesSB", sans-serif;
+    font-size: 1.22em;
+    line-height: 1.25em; }
   .img-video-slider .slider {
     height: auto;
     float: left;
@@ -1348,7 +1372,7 @@ footer {
     min-width: 30em; }
   .img-video-slider .slider li div {
     max-width: 25em;
-    color: rgba(0, 0, 0, 0.8); }
+    color: #333333; }
   .img-video-slider .small-description {
     margin: 0 auto;
     width: 90%; }
@@ -1371,6 +1395,9 @@ footer {
       width: 100%; }
     .img-video-slider .slider iframe {
       width: 100%; } }
+  @media (min-width: 800px) {
+    .img-video-slider h2 {
+      font-size: 1.75em; } }
 
 /* ALL PROJECTS SLIDER */
 .projects-slider .slider {
@@ -1383,7 +1410,7 @@ footer {
   height: 30em; }
 .projects-slider .slider li div {
   max-width: 25em;
-  color: rgba(0, 0, 0, 0.8); }
+  color: #333333; }
 .projects-slider .small-description {
   margin: 0 auto;
   width: 90%; }
@@ -1424,7 +1451,7 @@ footer {
   height: 30em; }
 .full-slider .slider li div {
   max-width: 25em;
-  color: rgba(0, 0, 0, 0.8); }
+  color: #333333; }
 .full-slider .small-description {
   margin: 0 auto;
   width: 90%; }
@@ -1553,14 +1580,16 @@ footer {
   margin: 2.5em auto;
   max-width: 40.5em;
   font-family: "Libre Baskerville", serif;
-  font-size: 1.375em;
-  line-height: 1.5em; }
+  font-size: 1.15em;
+  line-height: 2em; }
+  .txt-block h1, .txt-block h2, .txt-block h3, .txt-block h4, .txt-block h5 {
+    font-family: "omnesSB"; }
   .txt-block a {
     text-decoration: underline;
-    color: rgba(0, 0, 0, 0.8); }
+    color: #333333; }
   .txt-block p {
     margin-bottom: 1em; }
-  .txt-block i {
+  .txt-block i, .txt-block em {
     font-style: italic; }
   .txt-block b, .txt-block strong {
     font-family: "Libre Baskerville", serif;
@@ -1569,6 +1598,19 @@ footer {
     margin-left: 1em; }
   .txt-block li {
     list-style-type: disc; }
+  .txt-block blockquote {
+    font-size: 18px;
+    font-family: "omnesR";
+    margin-bottom: 16px; }
+  .txt-block blockquote:before {
+    content: "«"; }
+  .txt-block blockquote:after {
+    content: "»"; }
+  @media (min-width: 800px) {
+    .txt-block blockquote {
+      padding: 0 80px;
+      font-size: 28px;
+      line-height: 38px; } }
 
 /* FOUR COLUMNS W/THUMBNAIL IMAGE */
 .thumbnail-fourths,
@@ -1596,7 +1638,7 @@ footer {
         font-size: 1.75em; } }
   .thumbnail-fourths h3,
   .cir-thumbnail-fourths h3 {
-    color: rgba(0, 0, 0, 0.8); }
+    color: #333333; }
   .thumbnail-fourths .info,
   .cir-thumbnail-fourths .info {
     max-width: 11em;
@@ -1693,7 +1735,7 @@ footer {
     width: 24%; } }
 
 .cir-thumbnail-fourths a {
-  color: rgba(0, 0, 0, 0.8);
+  color: #333333;
   text-align: center; }
 .cir-thumbnail-fourths h4 {
   font-family: "omnesSB", sans-serif; }
@@ -1724,7 +1766,7 @@ footer {
 .square-thumbnails .one-fourth, .rectangle-thumbnails .one-fourth {
   padding-left: 1.25em; }
 .square-thumbnails a, .rectangle-thumbnails a {
-  color: rgba(0, 0, 0, 0.8); }
+  color: #333333; }
 .square-thumbnails .img, .rectangle-thumbnails .img {
   background-repeat: no-repeat;
   background-size: cover;
@@ -1786,7 +1828,7 @@ footer {
 
 /* PROFILE SLIDER BLOCK - THE SMALL CIRCLES ONE */
 .cir-small-thumbnail .slick-slider, .cir-small-thumbnail .slick-slide {
-  color: rgba(0, 0, 0, 0.8);
+  color: #333333;
   height: auto;
   text-align: center; }
 .cir-small-thumbnail .slick-slide {
@@ -1802,7 +1844,7 @@ footer {
   top: 45%; }
   .cir-small-thumbnail .slick-prev:after {
     content: "<";
-    color: rgba(0, 0, 0, 0.8);
+    color: #333333;
     position: absolute;
     left: 0; }
   @media (min-width: 600px) {
@@ -1814,7 +1856,7 @@ footer {
   top: 45%; }
   .cir-small-thumbnail .slick-next:after {
     content: ">";
-    color: rgba(0, 0, 0, 0.8); }
+    color: #333333; }
   @media (min-width: 600px) {
     .cir-small-thumbnail .slick-next {
       right: -20px; } }
@@ -1852,7 +1894,7 @@ footer {
 
 /* TIMELINE SLIDER BLOCK */
 .timeline-block .slick-slider, .timeline-block .slick-slide {
-  color: rgba(0, 0, 0, 0.8);
+  color: #333333;
   height: auto; }
 .timeline-block .slick-slide {
   position: relative;
@@ -1910,7 +1952,7 @@ footer {
 .timeline-block figure:after {
   content: "";
   width: 100%;
-  border-top: 2px solid rgba(0, 0, 0, 0.8);
+  border-top: 2px solid #333333;
   position: absolute;
   top: 3em; }
 .timeline-block figcaption p {
@@ -2007,7 +2049,7 @@ footer {
 .tornado .txt p {
   font-family: "omnesR";
   margin-top: 0;
-  color: rgba(0, 0, 0, 0.8);
+  color: #333333;
   margin-bottom: 1.5em; }
 @media (min-width: 800px) {
   .tornado > div:nth-child(3n+1) > div {
@@ -2125,7 +2167,7 @@ footer {
   width: 15em;
   height: 15em;
   padding-bottom: 0;
-  background: rgba(0, 0, 0, 0.8);
+  background: #333333;
   margin: 0 auto;
   text-align: center;
   opacity: 0;
@@ -2421,7 +2463,7 @@ footer {
       .single-profile .profile-picture li {
         font-size: 0.875em; } }
   .single-profile .profile-picture li a {
-    color: rgba(0, 0, 0, 0.8); }
+    color: #333333; }
   @media (min-width: 800px) {
     .single-profile .description {
       padding-right: 5em; }
@@ -2667,7 +2709,7 @@ footer {
         font-size: 0.875em; } }
   .contact-block input[type="text"], .contact-block input[type="email"] {
     background: #FFFFFF;
-    color: rgba(0, 0, 0, 0.8); }
+    color: #333333; }
     .contact-block input[type="text"]:focus, .contact-block input[type="email"]:focus {
       background: #f7f7f7;
       -moz-transition: all 0.3s ease;
@@ -2675,7 +2717,7 @@ footer {
       -webkit-transition: all 0.3s ease;
       transition: all 0.3s ease; }
   .contact-block input[type="text"]::-webkit-input-placeholder {
-    color: rgba(0, 0, 0, 0.8); }
+    color: #333333; }
   .contact-block input[type="submit"] {
     background: #2BBCB6;
     color: #FFFFFF;
