--- a/css/shame.css
+++ b/css/shame.css
@@ -15,14 +15,22 @@
 .acf-map {
 	width: 100%;
 	height: 400px;
-	border: #ccc solid 1px;
-	margin: 20px 0;
+	position: absolute;
 }
 
 /* fixes potential theme css conflict */
 .acf-map img {
 	max-width: inherit !important;
 }
-.rectangle-thumbnails .img {
-	padding-bottom: 0;
+
+/* footer 3 columns */
+footer .three-cols ul > li {
+	width: 32%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+/* Debugging */
+pre {
+	display: none;
 }
